# falcon_transfer

./: Cargo.toml  config.toml
benches/: file_range.rs  hot_file.rs  mask_merge.rs
examples/: cfg.rs  main.rs  network_throughput.rs
src/: agent.rs  codec.rs  endpoint.rs  env.rs  ewma.rs  handler.rs  handshake.rs  lib.rs  link_recovery_scheduler.rs  link_state.rs  link_state_table.rs  main.rs  msg.rs  nic.rs  scoped_addr.rs  socket.rs
src/addr/: endpoint.rs  error.rs  mod.rs  scoped_addr.rs
src/config/: cfg.rs  config.rs  instance.rs  mod.rs
src/env/: cfg.rs  codec.rs  mod.rs  socket.rs
src/event_handler/: discovery.rs  event_loop.rs  mod.rs
src/event_handler/network/: event_loop.rs  mod.rs  msg_event_adapter.rs  on_discovery.rs  on_handshake.rs
src/event_handler/task/: event.rs  share_task_r.rs  task_error.rs  task_state.rs
src/hot_file/: file_range.rs  hot_file.rs  interval.rs  mod.rs
src/iface/: codec.rs  inbound.rs  mod.rs  msg.rs  nic.rs  outbound.rs  socket.rs
src/inbound/: codec.rs  inbound.rs  mod.rs  msg.rs  socket.rs
src/link/: assigned.rs  bond.rs  event.rs  flag.rs  interceptor.rs  link_state.rs  link_state_table.rs  mod.rs  network_event.rs  table.rs
src/link/resume/: mod.rs  scheduler.rs  task.rs
src/outbound/: mod.rs  outbound.rs
src/session/: Interceptor.rs  encrypt_session.rs  mod.rs  session.rs
src/task/: download_task.rs  event.rs  mod.rs  share_task.rs  task_manager.rs
src/utils/: endpoint.rs  error_addr.rs  event.rs  handshake_state.rs  mod.rs  msg.rs  scoped_addr.rs  uid.rs
src/utils/addr/: endpoint.rs  error.rs  mod.rs  scoped_addr.rs
