[package]
name = "falcon_transfer"
version = "0.1.0"
edition = "2024"

[dependencies]
mdns-sd = "0.13.4"
tokio = { version = "1.44.1", features = ["full", "tracing", "test-util"] }
nanoid = "0.4.0"
hostname = "0.4.0"
thiserror = "2.0.12"
netif = { git = "https://github.com/OpenTritium/netif.git", branch = "main" }
const_format = "0.2.34"
snow = "0.9.6"
anyhow = "1.0.97"
bytes = "1.10.1"
tokio-util = { version = "0.7.13", features = ["net", "codec", "time"] }
bincode = "2.0.1"
futures = "0.3.31"
serde = { version = "1.0.219", features = ["derive"] }
rustc-hash = "2.1.1"
ipconfig = "0.3.2"
dashmap = "6.1.0"
bitflags = "2.9.0"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
regex = "1.6.0"
socket2 = "0.5.8"
console-subscriber = "0.4.1"
rayon = "1.10.0"
rand = "0.9.0"
indexmap = "2.8.0"