[package]
name = "falcon_transfer"
version = "0.1.0"
edition = "2024"

[dependencies]
mdns-sd = "0.13.2"
tokio = { version = "1.43.0", features = ["full", "tracing"] }
nanoid = "0.4.0"
hostname = "0.4.0"
thiserror = "2.0.11"
netif = { git = "https://github.com/OpenTritium/netif.git", branch = "main" }
const_format = "0.2.34"
snow = "0.9.6"
anyhow = "1.0.96"
bytes = "1.10.0"
tokio-util = { version = "0.7.13", features = ["net", "codec", "time"] }
bincode = "1.3.3"
futures = "0.3.31"
serde = { version = "1.0.218", features = ["derive"] }
rustc-hash = "2.1.1"
ipconfig = "0.3.2"
dashmap = "6.1.0"
bitflags = "2.8.0"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
regex = "1.6.0"
socket2 = "0.5.8"
console-subscriber = "0.4.1"
rayon = "1.10.0"
rand = "0.9.0"
indexmap = "2.7.1"
xxhash-rust = {version= "0.8.15",features=["xxh3"]}
smallvec = "1.14.0"
object-pool = "0.6.0"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports", "async_tokio"] }
rand = "0.9.0"
tempfile = "3.19.1"

[[bench]]
name = "file_range"
harness = false

[[bench]]
name = "hot_file"
harness = false
